Finish firstdraft figure 2 interpretation

--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -267,7 +267,11 @@ In 2022, 25% of hybrid journals (n = `r oa_jn_box_df |> filter(cr_year == "2022"
 These journals were, on average, smaller (M = `r oa_jn_box_df |> filter(cr_year == "2022", prop >= 0.5) |> pull(n) |> mean()`, SD = `r oa_jn_box_df |> filter(cr_year == "2022", prop >= 0.5) |> pull(n) |> sd()`) than those with an open access share below 50% (M = `r oa_jn_box_df |> filter(cr_year == "2022", prop <= 0.5) |> pull(n) |> mean()`, SD = `r oa_jn_box_df |> filter(cr_year == "2022", prop <= 0.5) |> pull(n) |> sd()`). 
 Notable exception of large journals with an above-average open access proportion were Physical Review D, a high-energy physics journal covered by the SCOAP3 consortium that provided open access to `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "2470-0010") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "2470-0010") |> pull(n)` articles in 2022, Astronomy and Physics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0004-6361") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0004-6361") |> pull(n)` articles in 2022 were open access), which shifted to a subscribe to open business model for all accepted articles as of April 2022, the Journal of Fluid Mechanics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0022-1120") |> pull(oa_all)` of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "0022-1120") |> pull(n)` articles in 2022 were open access) and Bioinformatics (`r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "1367-4803") |> pull(oa_all)` out of `r oa_jn_box_df |> filter(cr_year == "2022", issn_l == "1367-4803") |> pull(n)` articles in 2022 were open access), which flipped to full open access as of January 2023.
 
-When comparing the impact of open access trough transfromative agreements across journals, it shows that larger number of journals 
+When comparing the impact of open access trough transformative agreements across journals, it shows that for many journals these agreements have been a significant contributor to the growth of open access over the years (Figure 2D). 
+Examples of such journals include those with a scope on specific countries or regions, where also transformative agreements were implemented. 
+For instance, in 2022, the Germany-based journals Zeitschrift für Erziehungswissenschaft and Zeitschrift für Politikwissenschaft, as well as the Scandinavian Political Studies adressing the Nordic countries, achieved an overall open access uptake of more than 90% just through transformative agreements. 
+Despite the rise in transformative agreements, it is worth noting that other means of publishing open access in hybrid journals remained common. 
+In total, `r summary_all |> filter(cr_year == "2022", value > 0, name == "prop_no_ta") |> nrow()` journals published open access articles from authors affiliated with institutions without transformative agreements in place, while `r summary_all |> filter(cr_year == "2022", value > 0, name == "prop_ta_oa") |> nrow()` journals published at least one open access article through a transformative agreement in the same year.
 
 ```{r}
 jn_ind_jct <- hoaddata::jct_hybrid_jns |>
